tests/neg-custom-args/captures/sepchecks4.check
-- Error: tests/neg-custom-args/captures/sepchecks4.scala:8:12 ---------------------------------------------------------
8 |  val x: () => Unit = () => println(io) // error
  |         ^^^^^^^^^^
  |         Separation failure: value x's type () => Unit hides parameter io
  |         The parameter needs to be annotated with @consume to allow this.
-- Error: tests/neg-custom-args/captures/sepchecks4.scala:7:25 ---------------------------------------------------------
7 |def bad(io: Object^): () => Unit =    // error
  |                      ^^^^^^^^^^
  |                      Separation failure: method bad's result type () => Unit hides parameter io
  |                      The parameter needs to be annotated with @consume to allow this.
-- Error: tests/neg-custom-args/captures/sepchecks4.scala:12:25 --------------------------------------------------------
12 |  par(() => println(io))(() => println(io)) // error // (1)
   |                         ^^^^^^^^^^^^^^^^^
   |                         Separation failure: argument of type  () ->{io} Unit
   |                         to method par: (op1: () => Unit)(op2: () => Unit): Unit
   |                         corresponds to capture-polymorphic formal parameter op2 of type  () => Unit
   |                         and captures {io}, but this capability is also passed separately
   |                         in the first argument with type  () ->{io} Unit.
   |
   |                           Capture set of first argument         : {io}
   |                           Hidden set of current argument        : {io}
   |                           Footprint of first argument           : {io}
   |                           Hidden footprint of current argument  : {io}
   |                           Declared footprint of current argument: {}
   |                           Undeclared overlap of footprints      : {io}
